tests/dataset/tpc-ds/compiler/c/q13.error
/tmp/TestCCompiler_TPCDS_Goldenq133137348695/001/prog.c:285:3: error: unknown type name ‘customer_demographics_t’
  285 |   customer_demographics_t *data;
      |   ^~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq133137348695/001/prog.c: In function ‘create_customer_demographics_list’:
/tmp/TestCCompiler_TPCDS_Goldenq133137348695/001/prog.c:290:31: error: ‘customer_demographics_t’ undeclared (first use in this function); did you mean ‘customer_demographic_t’?
  290 |   l.data = calloc(len, sizeof(customer_demographics_t));
      |                               ^~~~~~~~~~~~~~~~~~~~~~~
      |                               customer_demographic_t
/tmp/TestCCompiler_TPCDS_Goldenq133137348695/001/prog.c:290:31: note: each undeclared identifier is reported only once for each function it appears in
/tmp/TestCCompiler_TPCDS_Goldenq133137348695/001/prog.c: At top level:
/tmp/TestCCompiler_TPCDS_Goldenq133137348695/001/prog.c:304:3: error: unknown type name ‘household_demographics_t’
  304 |   household_demographics_t *data;
      |   ^~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq133137348695/001/prog.c: In function ‘create_household_demographics_list’:
/tmp/TestCCompiler_TPCDS_Goldenq133137348695/001/prog.c:309:31: error: ‘household_demographics_t’ undeclared (first use in this function); did you mean ‘household_demographic_t’?
  309 |   l.data = calloc(len, sizeof(household_demographics_t));
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~
      |                               household_demographic_t
/tmp/TestCCompiler_TPCDS_Goldenq133137348695/001/prog.c: At top level:
/tmp/TestCCompiler_TPCDS_Goldenq133137348695/001/prog.c:324:3: error: unknown type name ‘customer_address_t’
  324 |   customer_address_t *data;
      |   ^~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq133137348695/001/prog.c: In function ‘create_customer_address_list’:
/tmp/TestCCompiler_TPCDS_Goldenq133137348695/001/prog.c:329:31: error: ‘customer_address_t’ undeclared (first use in this function); did you mean ‘customer_addres_t’?
  329 |   l.data = calloc(len, sizeof(customer_address_t));
      |                               ^~~~~~~~~~~~~~~~~~
      |                               customer_addres_t
/tmp/TestCCompiler_TPCDS_Goldenq133137348695/001/prog.c: In function ‘test_TPCDS_Q13_averages’:
/tmp/TestCCompiler_TPCDS_Goldenq133137348695/001/prog.c:364:49: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  364 |   if (test_TPCDS_Q13_averages_result.len != tmp1.len) {
      |                                                 ^
      |                                                 ->
/tmp/TestCCompiler_TPCDS_Goldenq133137348695/001/prog.c:368:58: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  368 |       if (test_TPCDS_Q13_averages_result.data[i3] != tmp1.data[i3]) {
      |                                                          ^
      |                                                          ->
/tmp/TestCCompiler_TPCDS_Goldenq133137348695/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq133137348695/001/prog.c:410:28: warning: implicit declaration of function ‘store_sale_list_t_create’ [-Wimplicit-function-declaration]
  410 |   store_sale_list_t tmp4 = store_sale_list_t_create(
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq133137348695/001/prog.c:411:18: error: ‘(store_sale_t *)&store_sales’ is a pointer; did you mean to use ‘->’?
  411 |       store_sales.len * store.len * customer_demographics.len *
      |                  ^
      |                  ->
/tmp/TestCCompiler_TPCDS_Goldenq133137348695/001/prog.c:411:30: error: ‘(store_t *)&store’ is a pointer; did you mean to use ‘->’?
  411 |       store_sales.len * store.len * customer_demographics.len *
      |                              ^
      |                              ->
/tmp/TestCCompiler_TPCDS_Goldenq133137348695/001/prog.c:411:58: error: ‘(customer_demographic_t *)&customer_demographics’ is a pointer; did you mean to use ‘->’?
  411 |       store_sales.len * store.len * customer_demographics.len *
      |                                                          ^
      |                                                          ->
/tmp/TestCCompiler_TPCDS_Goldenq133137348695/001/prog.c:412:29: error: ‘(household_demographic_t *)&household_demographics’ is a pointer; did you mean to use ‘->’?
  412 |       household_demographics.len * customer_address.len * date_dim.len);
      |                             ^
      |                             ->
/tmp/TestCCompiler_TPCDS_Goldenq133137348695/001/prog.c:412:52: error: ‘(customer_addres_t *)&customer_address’ is a pointer; did you mean to use ‘->’?
  412 |       household_demographics.len * customer_address.len * date_dim.len);
      |                                                    ^
      |                                                    ->
/tmp/TestCCompiler_TPCDS_Goldenq133137348695/001/prog.c:412:67: error: ‘(date_dim_t *)&date_dim’ is a pointer; did you mean to use ‘->’?
  412 |       household_demographics.len * customer_address.len * date_dim.len);
      |                                                                   ^
      |                                                                   ->
/tmp/TestCCompiler_TPCDS_Goldenq133137348695/001/prog.c:478:36: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  478 |   test_TPCDS_Q13_averages_result = result;
      |                                    ^~~~~~
